nav bar overlapping fixed, h1 removed from the index page and hights on speakers div increased

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
   display: inline;
   font-size: 20px;
   position: absolute;
-  top: 5px;
+  top: 1px;
   z-index: 1;
   left: 10px;
 }
@@ -400,7 +400,7 @@ body {
   background-color: white;
 }
 
-.speakers-div h1 {
+.speakers-div h2 {
   text-align: center;
   margin-bottom: 15px;
   color: #272a31;
@@ -449,7 +449,7 @@ body {
 .speakers-pic img {
   box-shadow: -5px -5px 8px rgb(20, 15, 15), -10px -10px 8px rgb(48, 5, 5), -15px -15px 8px rgb(247, 219, 219);
   width: 100%;
-  height: 150px;
+  height: 130px;
 }
 
 .speaker-text h4 {
@@ -697,6 +697,8 @@ body {
 .first-menu {
   border-radius: 1px solid white;
   border: solid;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .first-menu h3 {
@@ -765,7 +767,7 @@ body {
     background-color: white;
   }
 
-  .speakers-div h1 {
+  .speakers-div h2 {
     text-align: center;
     margin-bottom: 15px;
     color: #272a31;
@@ -1021,6 +1023,10 @@ body {
 
   .fir {
     margin-right: 0;
+  }
+
+  .section-ticket-div {
+    padding-top: 40px;
   }
 
   .sec {
